--- a/xiangmu/demo/scaffolding/package.json
+++ b/xiangmu/demo/scaffolding/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.4",
     "mint-ui": "^2.2.13",
     "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
     "qs": "^6.9.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
@@ -23,6 +24,7 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
